[gd_scene load_steps=4 format=2]

[ext_resource path="res://FallingObjects.gd" type="Script" id=1]
[ext_resource path="res://assets/img/art/fixed/shadow_palms_bg.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 340 )

[node name="FallingObjects" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7

[node name="TimerWord" type="Timer" parent="."]
wait_time = 5.0

[node name="AudioWord" type="AudioStreamPlayer" parent="."]

[node name="TimerResetGame" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="BG" type="Sprite" parent="."]
position = Vector2( 505.082, 297.869 )
texture = ExtResource( 2 )

[node name="LabelPoints" type="Label" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 80.0
margin_bottom = 44.0
rect_scale = Vector2( 3, 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPoints2" type="Label" parent="."]
margin_left = 542.0
margin_top = 30.0
margin_right = 592.0
margin_bottom = 44.0
rect_scale = Vector2( 3, 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DevidingLine" type="Line2D" parent="."]
points = PoolVector2Array( 512, 0, 512, 600 )

[node name="Area2D" type="Area2D" parent="DevidingLine"]
position = Vector2( 512, 320 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DevidingLine/Area2D"]
shape = SubResource( 1 )

[node name="Team1" type="Node2D" parent="."]

[node name="Team2" type="Node2D" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerWord" to="." method="_on_TimerWord_timeout"]
[connection signal="timeout" from="TimerResetGame" to="." method="_on_TimerResetGame_timeout"]
